@@ -1681,8 +1681,8 @@ int lprocfs_obd_rd_recovery_status(char *page, char **start, off_t off,
                 goto out;
 
         if (lprocfs_obd_snprintf(&page, size, &len, "time remaining: %lu\n",
-                                 CURRENT_SECONDS >= obd->obd_recovery_end ? 0 :
-                                 obd->obd_recovery_end - CURRENT_SECONDS) <= 0)
+                                 cfs_time_current_sec() >= obd->obd_recovery_end ? 0 :
+                                 obd->obd_recovery_end - cfs_time_current_sec()) <= 0)
                 goto out;
 
         if(lprocfs_obd_snprintf(&page, size, &len, "connected_clients: %d/%d\n",
